# krust

./: CMakeLists.txt  Cargo.toml  README.md  build.sh  grub.sh
.cargo/: config.toml
boot/i686/: CMakeLists.txt  boot.asm
buildsystem/grub/boot/grub/: grub.cfg
buildsystem/i686/: credits.md  link.ld  rustc-target.json
buildsystem/targets/i686/: CMakeLists.txt  krust-i686.json  link.ld
cmake/: toolchain.cmake
krust_kernel/: CMakeLists.txt  Cargo.toml
krust_kernel/src/: arch.rs  init.rs  lib.rs  log.rs  runtime.rs
krust_kernel/src/arch/i686/: logger.rs  mod.rs  port.rs  serial.rs
krust_kernel/src/init/: global_allocator.rs
